# monorepo-template

./: .buckconfig  .buckroot  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .release-config.json  .template-metadata.json  .yamllint.yml  BUCK  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: README.md  ci.yml  deploy.yml  docs.yml  performance.yml  release.yml  security.yml  status-badges.md  testing.yml
.kiro/specs/monorepo-template/: design.md  requirements.md  tasks.md
apps/: .gitkeep  BUCK
artifacts/: .gitkeep
config/: .gitkeep  .golangci.yml  README.md  audit.toml  cbindgen.toml  clippy.toml  dprint.json  nextest.toml  observability.toml  ruff.toml  rust-toolchain.toml  rust-tools.toml  rustfmt.toml  tools-versions.toml  typos.toml
config/build_rules/: defs.bzl  go.bzl  python.bzl  rust.bzl  rust_tools.bzl  typescript.bzl
config/cpu/: BUCK
config/monitoring/: metrics-config.toml
config/os/: BUCK
docs/: .gitkeep  SECURITY.md
docs/api/: README.md
docs/architecture/: README.md  build-system.md  system-architecture.md
docs/architecture/decisions/: 001-build-system-selection.md  002-rust-tooling-strategy.md  README.md
docs/migration/: MIGRATION_GUIDE.md
docs/observability/: README.md
docs/onboarding/: README.md
docs/runbooks/: README.md  build-system-maintenance.md  incident-response.md
examples/cross-language/: BUCK
examples/frontend-app/: BUCK  README.md  package.json
examples/frontend-app/src/: App.css  App.tsx  index.css
examples/frontend-app/src/components/: CreateUser.tsx  HealthCheck.tsx  Navigation.tsx  UserDetail.tsx  UserList.tsx
examples/frontend-app/src/services/: api.ts
examples/frontend-app/src/types/: user.ts
examples/infrastructure/: BUCK  README.md
examples/infrastructure/docker/: .dockerignore  Dockerfile  docker-compose.yml
examples/infrastructure/kubernetes/: namespace.yaml  web-service.yaml
examples/infrastructure/security-scanning/: checkov.yml  scan.sh  tfsec.yml
examples/infrastructure/terraform/: main.tf  outputs.tf  variables.tf
examples/infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
examples/observability/web-service/: BUCK  Cargo.toml
examples/observability/web-service/src/: main.rs
examples/shared-library/: BUCK  Cargo.toml  README.md  build.rs
examples/shared-library/bindings/node/: binding.gyp  package.json
examples/shared-library/bindings/python/: setup.py
examples/shared-library/bindings/python/src/: python_bindings.cpp
examples/shared-library/src/: error.rs  lib.rs  user.rs  validation.rs
examples/testing/: BUCK  Cargo.toml  README.md
examples/testing/benches/: api_benchmarks.rs
examples/testing/src/: database.rs  handlers.rs  lib.rs  models.rs  services.rs
examples/testing/tests/: integration_tests.rs
examples/testing/unit-tests/: user_service_test.rs
examples/web-service/: BUCK  Cargo.toml  README.md
examples/web-service/src/: main.rs
infra/: .gitkeep
infra/monitoring/: docker-compose.yml
infra/monitoring/dashboards/: build-deployment-metrics.json  developer-productivity.json  security-compliance.json  system-health.json
infra/monitoring/grafana/provisioning/dashboards/: dashboards.yml
infra/monitoring/grafana/provisioning/datasources/: prometheus.yml
infra/monitoring/prometheus/: prometheus.yml
libs/: .gitkeep  BUCK
libs/observability/: BUCK  Cargo.toml
libs/observability/src/: alerting.rs  config.rs  lib.rs  logging.rs  metrics.rs  tracing.rs
libs/observability/tests/: integration_tests.rs
libs/testing-framework/: BUCK  Cargo.toml
libs/testing-framework/src/: assertions.rs  containers.rs  fixtures.rs  helpers.rs  integration.rs  lib.rs  performance.rs  security.rs  unit.rs
libs/testing-framework/tests/: integration_tests.rs
releases/: .gitkeep
scripts/: .gitkeep  security-audit.ps1  security-audit.sh
scripts/docs/: generate-docs.ps1  generate-docs.sh
scripts/migration/: assess-project.sh
scripts/monitoring/: README.md  collect-metrics.ps1  collect-metrics.sh  dashboard-setup.ps1  dashboard-setup.sh  setup-monitoring.ps1  setup-monitoring.sh
scripts/quality/: README.md  code-review-assistant.ps1  code-review-assistant.sh  compatibility-check.ps1  compatibility-check.sh  doc-validation.ps1  doc-validation.sh  quality-gates.ps1  quality-gates.sh  setup-quality-enforcement.ps1  setup-quality-enforcement.sh
scripts/release/: README.md  artifact-signing.ps1  artifact-signing.sh  release-notes-generator.ps1  release-notes-generator.sh  release-orchestrator.ps1  release-orchestrator.sh  rollback-manager.ps1  rollback-manager.sh  version-manager.ps1  version-manager.sh
scripts/security/: README.md  container-security.ps1  container-security.sh  run-all-security-checks.ps1  run-all-security-checks.sh  secret-detection.ps1  secret-detection.sh  security-policy.ps1  security-policy.sh  vulnerability-scan.ps1  vulnerability-scan.sh
scripts/setup/: README.md  bootstrap.ps1  bootstrap.sh  health-check.ps1  health-check.sh  install-tools.sh
scripts/template/: README.md  init-template.ps1  init-template.sh  package-template.ps1  package-template.sh  update-template.ps1  update-template.sh  validate-template.ps1  validate-template.sh
scripts/testing/: run-all-tests.sh  run-performance-tests.sh  run-security-tests.sh  run-tests.ps1  run-tests.sh  run-unit-tests.ps1  run-unit-tests.sh
signatures/: .gitkeep
tools/: .gitkeep
