[package]
name = "example-shared-library"
version = "0.1.0"
edition = "2021"

[lib]
name = "example_shared"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
python-bindings = []
node-bindings = []