[package]
name = "observability-web-service"
version = "0.1.0"
edition = "2021"
description = "Example web service demonstrating observability integration"

[dependencies]
# Local dependencies
observability = { path = "../../../libs/observability" }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = "0.1"

# Error handling
anyhow = "1.0"

# Configuration
clap = { version = "4.0", features = ["derive"] }